crates/analyzer/tests/snapshots/errors__return_call_to_fn_without_return.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: expected function to return `u256` but was `()`
  ┌─ compile_errors/return_call_to_fn_without_return.fe:7:9
  │
7 │         return foo()
  │         ^^^^^^^^^^^^


